fixed the sourceforge.net icon to lower left

--- a/web/leftbar.html
+++ b/web/leftbar.html
@@ -1,13 +1,23 @@
-<a href="dicetool.html"><code>dicetool</code></a><br>
+<table border=0 height="100%">
+    <tr>
+        <td valign=top align=left>
+            <a href="dicetool.html"><code>dicetool</code></a><br>
 &nbsp;&nbsp;<a href="dicetool.jnlp">[webstart]</a><br>
-<a href="maptool.html"><code>maptool</code></a><br>
+            <a href="maptool.html"><code>maptool</code></a><br>
 <!-- &nbsp;&nbsp;<a href="maptool.jnlp">[webstart]</a><br> -->
-<br>
-<a href="http://sourceforge.net/projects/rptools/">SourceForge</a><br>
+            <br>
+            <a href="http://sourceforge.net/projects/rptools/">SourceForge</a><br>
 &nbsp;&nbsp;<a href="http://sourceforge.net/forum/?group_id=132209">Forums</a><br>
 &nbsp;&nbsp;<a href="http://sourceforge.net/tracker/?group_id=132209">Bugs&nbsp;&amp;&nbsp;Requests</a><br>
-<br>
-<a target="_new" href="http://jdl.sun.com/webapps/getjava/BrowserRedirect?locale=en&host=www.java.com:80">Get Java Now</a>
-<br>
-<br>
-<div valign="bottom"><A href="http://sourceforge.net"> <IMG src="http://sourceforge.net/sflogo.php?group_id=132209&amp;type=2" width="125" height="37" border="0" alt="SourceForge.net Logo" /></A></div>
+            <br>
+            <a target="_new" href="http://jdl.sun.com/webapps/getjava/BrowserRedirect?locale=en&host=www.java.com:80">Get Java Now</a>
+            <br>
+            <br>
+        </td>
+    </tr>
+    <tr>
+        <td valign=bottom align=center>
+            <A href="http://sourceforge.net"> <IMG src="http://sourceforge.net/sflogo.php?group_id=132209&amp;type=2" width="125" height="37" border="0" alt="SourceForge.net Logo" /></A>
+        </td>
+    </tr>
+</table>
