--- a/web/header.html
+++ b/web/header.html
@@ -8,6 +8,6 @@
 Role Playing Tools
 </font>
 <hr>
-<table border=0 columns=200,*><tr><td valign="top" bgcolor="#DDDDDD">
+<table border=0 columns=200,*><tr><td valign="top" height="100%" bgcolor="#DDDDDD">
 <!--#include virtual="leftbar.html" -->
 </td><td>&nbsp;</td><td>
