--- a/web/maptool.html
+++ b/web/maptool.html
@@ -26,10 +26,11 @@ or other instant messaging clients.
 <p>
 For map sharing, we started with Klooge Werks.  A very fine piece of code
 that is reasonably priced.  However our GM's "I'll describe, you draw"
-style was not very well supported by KW's drawing tools nor is it scalable (the GM is the only one that can draw/move things).  What we really
+style was not very well supported by KW's drawing tools nor is it scalable
+(the GM is the only one that can draw/move things).  What we really
 wanted was something much simpler which actually just made small
 improvements over the
-battlemap, minis, and wet-erase pens.  KW does a whole lot more than
+battlemap, minis, and wet-erase markers.  KW does a whole lot more than
 what we were looking for. 
 
 <h3>Features</h3>
