added download page and notready page

--- a/web/index.html
+++ b/web/index.html
@@ -15,10 +15,15 @@ to do all sorts of calculations.
 <p><a href="maptool.html"><code>maptool</code></a> is an elegant graphical
 tool to share maps (images) and map data (drawings, markers, grid placement) in a client/server fashion between multiple players.
 
+<h2>Availability</h2>
+
 <p>
-At this point we are still preparing our source code for uploading to the
-sourceforge CVS tree.  We will prepare both source and binary downloads for
-both tools soon.
+Source code for both projects is available now via our sourceforge.net's CVS repository.  Check
+out our <a href="http://sourceforge.net/projects/rptools/">SourceForge project page</a> for 
+details or to browse.  <code>dicetool</code> is available now as a Java Web Start and
+executable jar.  Please see our <a href="download.html">Downloads</a> page or the 
+navigation bar to the left.
+</p>
 
 <p>
 Keep in touch on our <a href="http://sourceforge.net/projects/rptools/">SourceForge project page</a>
