--- a/web/leftbar.html
+++ b/web/leftbar.html
@@ -6,6 +6,8 @@
             <a href="maptool.html"><code>maptool</code></a><br>
 <!-- &nbsp;&nbsp;<a href="maptool.jnlp">[webstart]</a><br> -->
             <br>
+            <a href="download.html">Downloads</a><br>
+            <br>
             <a href="http://sourceforge.net/projects/rptools/">SourceForge</a><br>
 &nbsp;&nbsp;<a href="http://sourceforge.net/forum/?group_id=132209">Forums</a><br>
 &nbsp;&nbsp;<a href="http://sourceforge.net/tracker/?group_id=132209">Bugs&nbsp;&amp;&nbsp;Requests</a><br>
