fixed page titles

--- a/web/download.html
+++ b/web/download.html
@@ -1,4 +1,4 @@
-<!--#set var="PAGE_TITLE" value="RPTools - DiceTool" -->
+<!--#set var="PAGE_TITLE" value="RPTools - Downloads" -->
 <!--#include virtual="header.html" -->
 
 <style type="text/css">
