--- a/web/notready.html
+++ b/web/notready.html
@@ -1,4 +1,4 @@
-<!--#set var="PAGE_TITLE" value="RPTools - DiceTool" -->
+<!--#set var="PAGE_TITLE" value="RPTools - Oops" -->
 <!--#include virtual="header.html" -->
 
 <h2>Sorry!</h2>
