adding documentation for dicetool

--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -6,6 +6,7 @@
             <a href="maptool.html"><code>maptool</code></a><br>
 <!-- &nbsp;&nbsp;<a href="maptool.jnlp">[webstart]</a><br> -->
             <br>
+            <a href="http://sourceforge.net/project/screenshots.php?group_id=132209">Screenshots</a><br>
             <a href="download.html">Downloads</a><br>
             <br>
             <a href="http://sourceforge.net/projects/rptools/">SourceForge</a><br>
