--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -4,6 +4,7 @@
             <a href="dicetool.html"><code>dicetool</code></a><br>
 &nbsp;&nbsp;<a href="dicetool.jnlp">[webstart]</a><br>
             <a href="maptool.html"><code>maptool</code></a><br>
+&nbsp;&nbsp;<a href="maptool/maptool.jnlp">[webstart]</a><br>
 <!-- &nbsp;&nbsp;<a href="maptool.jnlp">[webstart]</a><br> -->
             <br>
             <a href="http://sourceforge.net/project/screenshots.php?group_id=132209">Screenshots</a><br>
