--- a/web/src/notready.html
+++ b/web/src/notready.html
@@ -7,4 +7,5 @@ The file you've tried to download is not yet released on the
 website.  You could <a href="http://sourceforge.net/project/showfiles.php?group_id=132209">Try
 our SourceForge project File List</a> to see if we have what you need available.
 
+<!-- comment added 20050309-mrice -->
 <!--#include virtual="footer.html" -->
