--- a/web/src/notready.html
+++ b/web/src/notready.html
@@ -8,4 +8,5 @@ website.  You could <a href="http://sourceforge.net/project/showfiles.php?group_
 our SourceForge project File List</a> to see if we have what you need available.
 
 <!-- comment added 20050309-mrice -->
+<!-- comment added 20050309-2040-mrice -->
 <!--#include virtual="footer.html" -->
