maptool java web start released

--- a/web/src/download.html
+++ b/web/src/download.html
@@ -20,7 +20,8 @@
 <h2><code>maptool</code></h2>
 
 <blockquote>
-<A CLASS="unreleased" HREF="notready.html"><code>maptool</code> Web Start</A><BR>
+
+<a href="maptool/maptool.jnlp"><code>maptool</code> Web Start</a><br>
 
 <A CLASS="unreleased" HREF="notready.html"><code>maptool</code> executable JAR</A><BR>
 
