adding rcs tags

--- a/web/src/notready.html
+++ b/web/src/notready.html
@@ -10,3 +10,8 @@ our SourceForge project File List</a> to see if we have what you need available.
 <!-- comment added 20050309-mrice -->
 <!-- comment added 20050310-mrice -->
 <!--#include virtual="footer.html" -->
+
+<!--
+:Id:
+:Log:
+-->
