--- a/web/src/notready.html
+++ b/web/src/notready.html
@@ -12,6 +12,9 @@ our SourceForge project File List</a> to see if we have what you need available.
 <!--#include virtual="footer.html" -->
 
 <!--
-:Id:
-:Log:
+$Id: notready.html,v 1.7 2005/03/10 16:10:58 michaelrice Exp $
+$Log: notready.html,v $
+Revision 1.7  2005/03/10 16:10:58  michaelrice
+another attempt
+
 -->
