updating to see automatic cvs update work!

--- a/web/src/notready.html
+++ b/web/src/notready.html
@@ -7,13 +7,15 @@ The file you've tried to download is not yet released on the
 website.  You could <a href="http://sourceforge.net/project/showfiles.php?group_id=132209">Try
 our SourceForge project File List</a> to see if we have what you need available.
 
-<!-- comment added 20050309-mrice -->
 <!-- comment added 20050310-mrice -->
 <!--#include virtual="footer.html" -->
 
 <!--
-$Id: notready.html,v 1.7 2005/03/10 16:10:58 michaelrice Exp $
+$Id: notready.html,v 1.8 2005/03/10 16:17:09 michaelrice Exp $
 $Log: notready.html,v $
+Revision 1.8  2005/03/10 16:17:09  michaelrice
+updating to see automatic cvs update work!
+
 Revision 1.7  2005/03/10 16:10:58  michaelrice
 another attempt
 
