--- a/web/src/notready.html
+++ b/web/src/notready.html
@@ -8,11 +8,15 @@ website.  You could <a href="http://sourceforge.net/project/showfiles.php?group_
 our SourceForge project File List</a> to see if we have what you need available.
 
 <!-- comment added 20050310-mrice -->
+<!-- comment added 20050312-mrice -->
 <!--#include virtual="footer.html" -->
 
 <!--
-$Id: notready.html,v 1.8 2005/03/10 16:17:09 michaelrice Exp $
+$Id: notready.html,v 1.9 2005/03/12 14:22:51 michaelrice Exp $
 $Log: notready.html,v $
+Revision 1.9  2005/03/12 14:22:51  michaelrice
+still getting the bits for auto cvs ... hopefully this approach works
+
 Revision 1.8  2005/03/10 16:17:09  michaelrice
 updating to see automatic cvs update work!
 
