new look, just for david

--- a/web/src/header.html
+++ b/web/src/header.html
@@ -5,7 +5,12 @@
 </head>
 <body bgcolor="dark grey">
 <font size="+3" weight=bold >
-Role Playing Tools
+<table border=0 width=100%">
+<tr width=100%><td width=100%">
+<img src="rptools-logo.png">
+</td><td width=100%">
+   <A href="http://sourceforge.net"> <IMG src="http://sourceforge.net/sflogo.php?group_id=132209&amp;type=2" width="125" height="37" border="0" alt="SourceForge.net Logo" /></A>
+</td></tr></table>
 </font>
 <hr>
 <table border=0 columns=200,*><tr><td valign="top" height="100%" bgcolor="#DDDDDD">
