--- a/web/src/index.html
+++ b/web/src/index.html
@@ -18,11 +18,18 @@ tool to share maps (images) and map data (drawings, markers, grid placement) in 
 <h2>Availability</h2>
 
 <p>
-Source code for both projects is available now via our sourceforge.net's CVS repository.  Check
-out our <a href="http://sourceforge.net/projects/rptools/">SourceForge project page</a> for 
-details or to browse.  <code>dicetool</code> is available now as a Java Web Start and
-executable jar.  Please see our <a href="download.html">Downloads</a> page or the 
-navigation bar to the left.
+Source code for both projects is available now via our 
+sourceforge.net's CVS repository.  Check
+out our 
+<a href="http://sourceforge.net/projects/rptools/">SourceForge project page</a> for details or to browse.  
+Both <code>dicetool</code> and <code>maptool</code> are available now 
+from our launch links at the left.  This will run them as Java Web Start
+applications.   You need Java 1.5 to run either tool.  Use the 
+Get Java Now link to download that from java.com.
+Additional downloads may be made available from time to time -- such as 
+executable jars.   V
+Please see our <a href="download.html">Downloads</a> page or the 
+navigation bar to the left or the SourceForge project File release.
 </p>
 
 <p>
