--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -1,27 +1,18 @@
-<table border=0 height="100%">
-    <tr>
-        <td valign=top align=left>
-            <a href="dicetool.html"><code>dicetool</code></a><br>
-&nbsp;&nbsp;<a href="dicetool.jnlp">[webstart]</a><br>
-            <a href="maptool.html"><code>maptool</code></a><br>
-&nbsp;&nbsp;<a href="maptool/maptool.jnlp">[webstart]</a><br>
-<!-- &nbsp;&nbsp;<a href="maptool.jnlp">[webstart]</a><br> -->
-            <br>
-            <a href="http://sourceforge.net/project/screenshots.php?group_id=132209">Screenshots</a><br>
-            <a href="download.html">Downloads</a><br>
-            <br>
-            <a href="http://sourceforge.net/projects/rptools/">SourceForge</a><br>
-&nbsp;&nbsp;<a href="http://sourceforge.net/forum/?group_id=132209">Forums</a><br>
-&nbsp;&nbsp;<a href="http://sourceforge.net/tracker/?group_id=132209">Bugs&nbsp;&amp;&nbsp;Requests</a><br>
-            <br>
-            <a target="_new" href="http://jdl.sun.com/webapps/getjava/BrowserRedirect?locale=en&host=www.java.com:80">Get Java Now</a>
-            <br>
-            <br>
-        </td>
-    </tr>
-    <tr>
-        <td valign=bottom align=center>
-            <A href="http://sourceforge.net"> <IMG src="http://sourceforge.net/sflogo.php?group_id=132209&amp;type=2" width="125" height="37" border="0" alt="SourceForge.net Logo" /></A>
-        </td>
-    </tr>
-</table>
+            <h4 style="leftbar-topicheading">Products</h4>
+                <ul><li><a href="dicetool.jnlp">launch dicetool</a>
+                    <li><a href="maptool/maptool.jnlp">launch maptool</a>
+                    <li><a href="download.html">Downloads</a>
+                </ul>
+            <h4 style="leftbar-topicheading">Documentation</h4>
+                <ul><li><a href="dicetool.html"><code>dicetool</code></a>
+                    <li><a href="maptool.html"><code>maptool</code></a>
+                    <li><a href="http://sourceforge.net/project/screenshots.php?group_id=132209">Screenshots</a>
+                </ul>
+            <h4 style="leftbar-topicheading">SourceForge</h4>
+                <ul><li><a href="http://sourceforge.net/projects/rptools/">Project Page</a>
+                    <li><a href="http://sourceforge.net/forum/?group_id=132209">Forums</a>
+                    <li><a href="http://sourceforge.net/tracker/?group_id=132209">Bugs&nbsp;&amp;&nbsp;Requests</a>
+                </ul>
+            <h4 style="leftbar-topicheading">
+            <a target="_new" href="http://jdl.sun.com/webapps/getjava/BrowserRedirect?locale=en&host=www.java.com:80">Get Java Now</a></h4>
+            <p><br><!-- blank space -->
