--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -1,6 +1,6 @@
             <h4 style="leftbar-topicheading">Products</h4>
-                <ul><li><a href="dicetool.jnlp">launch dicetool</a>
-                    <li><a href="maptool/maptool.jnlp">launch maptool</a>
+                <ul><li><a href="dicetool.jnlp">Launch dicetool</a>
+                    <li><a href="maptool/maptool.jnlp">Launch maptool</a>
                     <li><a href="download.html">Downloads</a>
                 </ul>
             <h4 style="leftbar-topicheading">Documentation</h4>
