minor tweaks to content

--- a/web/src/header.html
+++ b/web/src/header.html
@@ -15,4 +15,4 @@
 <hr>
 <table border=0 columns=200,*><tr><td valign="top" height="100%" bgcolor="#DDDDDD">
 <!--#include virtual="leftbar.html" -->
-</td><td>&nbsp;</td><td>
+</td><td>&nbsp;</td><td valign="top">
