--- a/web/src/index.html
+++ b/web/src/index.html
@@ -5,35 +5,38 @@
 
 <p>
 We found that we wanted to augment our pen-and-paper roleplaying
-(primarily 3.5ed D&amp;D) with computer aids.  
+(primarily 3.5ed D&amp;D) with computer aids.   These tools 
+extend and augment our traditional playing style.  They are not
+a role playing game by themselves, nor are they meant to replace
+everything at the D&amp;D table.
+</p>
 
 <p><a href="dicetool.html"><code>dicetool</code></a>
 is a simple but powerful expression parser that has built in functions
 for random number generation and can be further extended by JavaScript
 to do all sorts of calculations.  
+</p>
 
 <p><a href="maptool.html"><code>maptool</code></a> is an elegant graphical
 tool to share maps (images) and map data (drawings, markers, grid placement) in a client/server fashion between multiple players.
+</p>
 
 <h2>Availability</h2>
 
 <p>
-Source code for both projects is available now via our 
-sourceforge.net's CVS repository.  Check
-out our 
-<a href="http://sourceforge.net/projects/rptools/">SourceForge project page</a> for details or to browse.  
-Both <code>dicetool</code> and <code>maptool</code> are available now 
-from our launch links at the left.  This will run them as Java Web Start
-applications.   You need Java 1.5 to run either tool.  Use the 
-Get Java Now link to download that from java.com.
-Additional downloads may be made available from time to time -- such as 
-executable jars.   V
-Please see our <a href="download.html">Downloads</a> page or the 
-navigation bar to the left or the SourceForge project File release.
+Both <code>dicetool</code> and <code>maptool</code> are available as
+Java Web Start applications.  Use the links at the left or
+from our <a href="downloads.html">Downloads</a> page to launch.
+</p>
+<p>
+Source code for both projects is available now via CVS.  Check out our <a
+href="http://sourceforge.net/projects/rptools/">SourceForge project page</a>
+for details or to browse.  You need Java 1.5 to run either tool.  Use the Get
+Java Now link to install from java.com.
 </p>
 
 <p>
-Keep in touch on our <a href="http://sourceforge.net/projects/rptools/">SourceForge project page</a>
+Keep in touch on our <a href="http://sourceforge.net/projects/rptools/">SourceForge project page</a>.
 </p>
 
 <!--#include virtual="footer.html" -->
