--- a/web/src/header.html
+++ b/web/src/header.html
@@ -7,7 +7,7 @@
 <font size="+3" weight=bold >
 <table border=0 width=100%">
 <tr width=100%><td width=100%">
-<img src="rptools-logo.png">
+<a href="rptools.net"><img src="rptools-logo.png" border="0"></a>
 </td><td width=100%">
    <A href="http://sourceforge.net"> <IMG src="http://sourceforge.net/sflogo.php?group_id=132209&amp;type=2" width="125" height="37" border="0" alt="SourceForge.net Logo" /></A>
 </td></tr></table>
