style changes, and moving dicetool to subdir....

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,6 +1,10 @@
 <!--#set var="PAGE_TITLE" value="Welcome to RPTools" -->
 <!--#include virtual="header.html" -->
 
+<font size="+3" weight=bold >
+Role Playing Tools
+</font>
+
 <h2>Introduction</h2>
 
 <p>
@@ -25,18 +29,13 @@ tool to share maps (images) and map data (drawings, markers, grid placement) in 
 
 <p>
 Both <code>dicetool</code> and <code>maptool</code> are available as
-Java Web Start applications.  Use the links at the left or
-from our <a href="downloads.html">Downloads</a> page to launch.
+Java Web Start applications.  
+You need Java 1.5 to run either tool.
 </p>
 <p>
 Source code for both projects is available now via CVS.  Check out our <a
 href="http://sourceforge.net/projects/rptools/">SourceForge project page</a>
-for details or to browse.  You need Java 1.5 to run either tool.  Use the Get
-Java Now link to install from java.com.
-</p>
-
-<p>
-Keep in touch on our <a href="http://sourceforge.net/projects/rptools/">SourceForge project page</a>.
+for details or to browse.  
 </p>
 
 <!--#include virtual="footer.html" -->
