--- a/web/src/maptool.html
+++ b/web/src/maptool.html
@@ -8,21 +8,10 @@ MapTool
 <h2>Introduction</h2>
 
 <p>
-Our brother wanted to join our group from NV (we're in TX), and we
-sought to solve all of the long-distance role playing hurdles.  Voice,
-text, die rolling, and the battle map.
-
-<p>
-For voice we recommend Skype.  It has echo-cancellation that makes it
-superior to all the other voice sharing tools out there, and this
-was a huge consideration because there were speakers and "open" microphones
-at both ends so that the remote player could hear everyone at the table
-and everyone could hear him.
-
-<p>
-For die rolls and "private" messages we used the text chat boxes of Skype
-or other instant messaging clients.
-
+Our brother wanted to join our group from NV (we're in TX), and we sought to
+solve all of the long-distance role playing hurdles.  <a
+href="voice.html">Voice</a>, text, die rolling, and the battle map.
+There are tools available for many of these problems.
 <p>
 For map sharing, we started with Klooge Werks.  A very fine piece of code
 that is reasonably priced.  However our GM's "I'll describe, you draw"
