--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -1,5 +1,5 @@
             <h4 style="leftbar-topicheading">Products</h4>
-                <ul><li><a href="dicetool.jnlp">Launch dicetool</a>
+                <ul><li><a href="dicetool/dicetool.jnlp">Launch dicetool</a>
                     <li><a href="maptool/maptool.jnlp">Launch maptool</a>
                     <li><a href="download.html">Downloads</a>
                 </ul>
