put the logo link back in

--- a/web/src/header.html
+++ b/web/src/header.html
@@ -8,7 +8,7 @@
 <tr width=100%>
   <td width=100%">
     <font size=+3 style="font-weight: bold">
-    <img src="rptools-logo.png" alt="Role Playing Tools">
+    <a href="http://www.rptools.net"><img src="rptools-logo.png" alt="Role Playing Tools" border="0"></a>
     </font>
   </td> 
   <td width=100%">
