--- a/web/src/header.html
+++ b/web/src/header.html
@@ -7,9 +7,7 @@
 <table border=0 width=100%">
 <tr width=100%>
   <td width=100%">
-    <font size=+3 style="font-weight: bold">
     <a href="http://www.rptools.net"><img src="rptools-logo.png" alt="Role Playing Tools" border="0"></a>
-    </font>
   </td> 
   <td width=100%">
     <A href="http://sourceforge.net"> <IMG src="http://sourceforge.net/sflogo.php?group_id=132209&amp;type=2" width="125" height="37" border="0" alt="SourceForge.net Logo" /></A>
@@ -17,7 +15,7 @@
   </tr>
 </table>
 <hr>
-<table border=0 columns=200,*>
+<table>
   <tr>
     <td id="leftpane">
         <!--#include virtual="leftbar.html" -->
