all more better... dicetool seems to launch

--- a/web/src/dicetool/functions.html
+++ b/web/src/dicetool/functions.html
@@ -17,4 +17,8 @@ threat rules.
     att(15)+BAB+DEX;d6+1+STR
 </code></blockquote>
 
+<p>
+<a href="functions.js">Download functions.js here</a>... Note that you 
+may need to "Save Link As..." to get it to download to your disk.
+
 <!--#include virtual="../footer.html" -->
