fixing quite a bit

--- a/web/src/functions.html
+++ b/web/src/functions.html
@@ -1,5 +1,5 @@
 <!--#set var="PAGE_TITLE" value="Welcome to RPTools" -->
-<!--#include virtual="../header.html" -->
+<!--#include virtual="header.html" -->
 
 <p><code>functions.js</code> extends the capabilities of the
 <code>dicetool</code> by allowing you to write your own functions and have
@@ -21,4 +21,4 @@ threat rules.
 <a href="functions.js">Download functions.js here</a>... Note that you 
 may need to "Save Link As..." to get it to download to your disk.
 
-<!--#include virtual="../footer.html" -->
+<!--#include virtual="footer.html" -->
