added strong indications that this is a pre-1.0 tool

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -28,8 +28,7 @@ tool to share maps (images) and map data (drawings, markers, grid placement) in 
 <h2>Availability</h2>
 
 <p>
-Both <code>dicetool</code> and <code>maptool</code> are available as
-Java Web Start applications.  
+Both tools are available as pre-1.0 versions.  
 You need Java 1.5 to run either tool.
 </p>
 <p>
