--- a/web/src/maptool.html
+++ b/web/src/maptool.html
@@ -22,7 +22,7 @@ improvements over the
 battlemap, minis, and wet-erase markers.  KW does a whole lot more than
 what we were looking for. 
 
-<h3>Features</h3>
+<h2>Features</h2>
 <p>
 <ul>
     <li>client/server
@@ -34,5 +34,10 @@ what we were looking for.
     <li>pan and zoom client features
     <li>Java 1.5 (WebStart supported)
 </ul>
+
+<h2>Version</h2>
+
+<p>
+<code>maptool</code> is currently released as 1.0M1.  Roadmaps and release notes are in the <a href="http://sourceforge.net/forum/?group_id=132209">Forums</a>.
 
 <!--#include virtual="footer.html" -->
