explained java web start a little bit

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -31,6 +31,16 @@ tool to share maps (images) and map data (drawings, markers, grid placement) in 
 Both tools are available as pre-1.0 versions.  
 You need Java 1.5 to run either tool.
 </p>
+
+<p>
+You can launch the tools directly from the website using Java Web Start.  
+JWS caches the files and controls launching the app for you from the
+cache.  In the future we will have JWS ask you if you want to
+install start links (e.g. on the Desktop or Start Menu), but for now you need
+to be connected to our website to run.  This is advantageous as we currently
+expect frequent releases and JWS will download any new files it needs.
+</p>
+
 <p>
 Source code for both projects is available now via CVS.  Check out our <a
 href="http://sourceforge.net/projects/rptools/">SourceForge project page</a>
