Converted jnlp links to use jws.php - dynamic jnlp url generator, so that resulting jnlp will point to it's own location for the source of files.
This will allow 'beta' site to contain the application separate from the
production site.  (and other test sites as well).

--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -1,6 +1,6 @@
             <h4 style="leftbar-topicheading">Products</h4>
-                <ul><li><a href="dicetool/dicetool.jnlp">Launch dicetool</a>
-                    <li><a href="maptool/maptool.jnlp">Launch maptool</a>
+                <ul><li><a href="dicetool/jws.php">Launch dicetool</a>
+                    <li><a href="maptool/jws.php">Launch maptool</a>
                     <li><a href="download.html">Downloads</a>
                 </ul>
             <h4 style="leftbar-topicheading">Documentation</h4>
