--- a/web/src/maptool.html
+++ b/web/src/maptool.html
@@ -40,4 +40,5 @@ what we were looking for.
 <p>
 <code>maptool</code> is currently released as 1.0M1.  Roadmaps and release notes are in the <a href="http://sourceforge.net/forum/?group_id=132209">Forums</a>.
 
+<h2><a href="dicetool/jws.php">Launch DiceTool</a></h2>
 <!--#include virtual="footer.html" -->
