need a link to the change log, thank you

--- a/web/src/maptool.html
+++ b/web/src/maptool.html
@@ -40,4 +40,10 @@ what we were looking for.
 <p>
 <code>maptool</code> is currently released as 1.0M2.  Roadmaps and release notes are in the <a href="http://sourceforge.net/forum/?group_id=132209">Forums</a>.
 
+<h2>Changes</h2>
+
+<p>
+Please see the <a href="maptool/ChangeLog">Change Log</a> for a list of
+recent changes.</p>
+
 <!--#include virtual="footer.html" -->
