added token tool

--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -1,7 +1,7 @@
             <h4 style="leftbar-topicheading">Products</h4>
                 <ul><li><a href="dicetool/jws.php">Launch dicetool</a>
                     <li><a href="maptool/jws.php">Launch maptool</a>
-                    <li><a href="tokentook/jws.php">Launch Tokentool (new)</a>
+                    <li><a href="tokentool/jws.php">Launch Tokentool (new)</a>
                     <li><a href="download.html">Downloads</a>
                 </ul>
             <h4 style="leftbar-topicheading">Documentation</h4>
