--- a/web/src/index.html
+++ b/web/src/index.html
@@ -25,11 +25,15 @@ to do all sorts of calculations.
 tool to share maps (images) and map data (drawings, markers, grid placement) in a client/server fashion between multiple players.
 </p>
 
+<p><a href="tokentool.html"><code>tokentool</code></a> is an accessory to
+maptool.   Drag any image onto the workspace and use the mouse to move and zoom the image in the reticle.  Then drag from the preview pane directly onto maptool -- or Ctrl-E to save as a jpeg file.
+
 <h2>Availability</h2>
 
 <p>
-Both tools are available as pre-1.0 versions.  
-You need Java 1.5 to run either tool.
+You need Java 1.5 to run these tools, click <a
+href="http://jdl.sun.com/webapps/getjava/BrowserRedirect?locale=en&host=www.java.com:80">Get Java Now</a> here or to the left to install Java 1.5 on your
+computer.
 </p>
 
 <p>
@@ -42,7 +46,7 @@ expect frequent releases and JWS will download any new files it needs.
 </p>
 
 <p>
-Source code for both projects is available now via CVS.  Check out our <a
+Source code is available now via CVS on SourceForge.  Check out our <a
 href="http://sourceforge.net/projects/rptools/">SourceForge project page</a>
 for details or to browse.  
 </p>
