--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -1,12 +1,13 @@
-            <h4 style="leftbar-topicheading">Products</h4>
-                <ul><li><a href="dicetool/jws.php">Launch dicetool</a>
-                    <li><a href="maptool/jws.php">Launch maptool</a>
-                    <li><a href="tokentool/jws.php">Launch tokentool</a>
-                    <li><a href="download.html">Downloads</a>
+            <h4 style="leftbar-topicheading">Quick Launch</h4>
+                <ul><li><a href="dicetool/jws.php">dicetool</a>
+                    <li><a href="maptool/jws.php">maptool</a>
+                    <li><a href="tokentool/jws.php">tokentool</a>
                 </ul>
-            <h4 style="leftbar-topicheading">Documentation</h4>
+            <h4 style="leftbar-topicheading">Tools</h4>
                 <ul><li><a href="dicetool.html"><code>dicetool</code></a>
                     <li><a href="maptool.html"><code>maptool</code></a>
+                    <li><a href="tokentool.html"><code>tokentool</code></a>
+                    <li><a href="download.html">Downloads</a>
                     <li><a href="http://sourceforge.net/project/screenshots.php?group_id=132209">Screenshots</a>
                 </ul>
             <h4 style="leftbar-topicheading">SourceForge</h4>
