lots of doc changes for M3 maptool release

--- a/web/src/functions.html
+++ b/web/src/functions.html
@@ -18,7 +18,7 @@ threat rules.
 </code></blockquote>
 
 <p>
-<a href="functions.js">Download functions.js here</a>... Note that you 
+<a href="dicetool/functions.js">Download functions.js here</a>... Note that you 
 may need to "Save Link As..." to get it to download to your disk.
 
 <!--#include virtual="footer.html" -->
