--- a/web/src/index.html
+++ b/web/src/index.html
@@ -26,7 +26,9 @@ tool to share maps (images) and map data (drawings, markers, grid placement) in 
 </p>
 
 <p><a href="tokentool.html"><code>tokentool</code></a> is an accessory to
-maptool.   Drag any image onto the workspace and use the mouse to move and zoom the image in the reticle.  Then drag from the preview pane directly onto maptool -- or Ctrl-E to save as a jpeg file.
+maptool.   Drag any image onto the workspace and use the mouse to move and zoom
+the image in the reticle.  Then drag from the preview pane directly onto
+maptool -- or File->Save to save a png file.
 
 <h2>Availability</h2>
 
