--- a/web/src/maptool.html
+++ b/web/src/maptool.html
@@ -46,4 +46,17 @@ what we were looking for.
 Please see the <a href="maptool/ChangeLog">Change Log</a> for a list of
 recent changes.</p>
 
+<h2>Download</h2>
+
+<ul>
+<li><a href="maptool/jws.php">
+Java Web Start </a><br>
+<li><a href="maptool/maptool-1.0M3.zip">
+ZIP archive (executable jar included) </a><br>
+<li><a href="http://cvs.sourceforge.net/viewcvs.py/rptools/maptool/">
+Source Code via CVS </a><br>
+</ul>
+
+<h2><a href="maptooldoc.html">Documentation</a></h2>
+
 <!--#include virtual="footer.html" -->
