--- a/web/src/tokentool.html
+++ b/web/src/tokentool.html
@@ -32,4 +32,17 @@ easy.
 Please see the <a href="tokentool/ChangeLog">Change Log</a> for a list of
 recent changes.</p>
 
+<h2>Download</h2>
+
+<ul>
+<li><a href="tokentool/jws.php">
+Java Web Start </a><br>
+<li><a href="tokentool/tokentool-1.0M1.zip">
+ZIP archive (executable jar included) </a><br>
+<li><a href="http://cvs.sourceforge.net/viewcvs.py/rptools/tokentool/">
+Source Code via CVS </a><br>
+</ul>
+
+<h2><a href="tokentooldoc.html">Documentation</a></h2>
+
 <!--#include virtual="footer.html" -->
