Finishing up tokentool documentation.

--- a/web/src/tokentooldoc.html
+++ b/web/src/tokentooldoc.html
@@ -5,6 +5,24 @@
 TokenTool Documentation
 </font>
 
-<h2>Nothing to see here, move along</h2>
+<h2>Drop</h2>
+
+<p>
+<img align=right src="tokentool/docs/tokentool.PNG"/>
+Just drop an image onto the tokentool background to get started.  
+
+<p>The white bordered square to the right is a preview pane, the white will actually be transparent, the grey circle will form a border around your image.
+
+<h2>Zoom, Pan, Circle</h2>
+
+<p>Click-drag the image around in the window to get the part of it visible that you want to stamp your token from.
+
+<p>Use the mouse wheel to zoom your image in and out.  Ctrl-mouse wheel will zoom faster if you have a long way to go.
+
+<p>Drag the circle around until it frames your subject perfectly.
+
+<h2>Save</h2>
+
+<p>Ctrl-E or File->Save to save your token as a PNG file (in your maptool asset directory, of course).  Or, if you're impatient like us, just drag from the "preview" onto maptool directly.
 
 <!--#include virtual="footer.html" -->
