--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -1,9 +1,8 @@
             <br> 
-            <br> 
             <h4 style="leftbar-topicheading">Quick Launch</h4>
-                <ul><li><a href="dicetool/jws.php">dicetool</a>
-                    <li><a href="maptool/jws.php">maptool</a>
-                    <li><a href="tokentool/jws.php">tokentool</a>
+                <ul><li><a href="dicetool/jws.php">DiceTool</a>
+                    <li><a href="maptool/jws.php">MapTool</a>
+                    <li><a href="tokentool/jws.php">TokenTool</a>
                 </ul>
             <h4 style="leftbar-topicheading">Tools</h4>
                 <ul><li><a href="dicetool.html"><code>dicetool</code></a>
