--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -4,9 +4,9 @@
                     <li><a href="tokentool/jws.php"><code>tokentool</code></a>
                 </ul>
             <h4 style="leftbar-topicheading">Tools</h4>
-                <ul><li><a href="dicetool.html">DiceTool</a>
-                    <li><a href="maptool.html">MapTool</a>
-                    <li><a href="tokentool.html">TokenTool</a>
+                <ul><li><a href="dicetool.html"><code>dicetool</code></a>
+                    <li><a href="maptool.html"><code>maptool</code></a>
+                    <li><a href="tokentool.html"><code>tokentool</code></a>
                     <li><a href="http://sourceforge.net/project/screenshots.php?group_id=132209">Screenshots</a>
                 </ul>
             <h4 style="leftbar-topicheading">SourceForge</h4>
