--- a/web/src/tokentooldoc.html
+++ b/web/src/tokentooldoc.html
@@ -8,10 +8,14 @@ TokenTool Documentation
 <h2>Drop</h2>
 
 <p>
-<img align=right src="tokentool/docs/tokentool.PNG"/>
+<img align=right src="tokentool/docs/tokentool-1.png"/>
 Just drop an image onto the tokentool background to get started.  
 
 <p>The white bordered square to the right is a preview pane, the white will actually be transparent, the grey circle will form a border around your image.
+
+<p>
+<em>Artwork borrowed from <a href="http://www.themindseyes.com/">The Mind's
+Eyes</a></em>
 
 <h2>Zoom, Pan, Circle</h2>
 
@@ -23,6 +27,7 @@ Just drop an image onto the tokentool background to get started.
 
 <h2>Save</h2>
 
+<img align=right src="tokentool/docs/.token.drag.png"/>
 <p>Ctrl-E or File->Save to save your token as a PNG file (in your maptool asset directory, of course).  Or, if you're impatient like us, just drag from the "preview" onto maptool directly.
 
 <!--#include virtual="footer.html" -->
