needed image sizes

--- a/web/src/tokentooldoc.html
+++ b/web/src/tokentooldoc.html
@@ -8,7 +8,8 @@ TokenTool Documentation
 <h2>Drop</h2>
 
 <p>
-<img align=right src="tokentool/docs/tokentool-1.png"/>
+<img align=right src="tokentool/docs/tokentool-1.png" height="300" width="400"/>
+
 Just drop an image onto the tokentool background to get started.  
 
 <p>The white bordered square to the right is a preview pane, the white will actually be transparent, the grey circle will form a border around your image.
@@ -27,7 +28,7 @@ Eyes</a></em>
 
 <h2>Save</h2>
 
-<img align=right src="tokentool/docs/.token.drag.png"/>
+<img align=right src="tokentool/docs/.token.drag.png" width=128 height=128/>
 <p>Ctrl-E or File->Save to save your token as a PNG file (in your maptool asset directory, of course).  Or, if you're impatient like us, just drag from the "preview" onto maptool directly.
 
 <!--#include virtual="footer.html" -->
