updated language in maptool page, and added new M4 elements to Changelog

--- a/web/src/maptool.html
+++ b/web/src/maptool.html
@@ -8,19 +8,18 @@ MapTool
 <h2>Introduction</h2>
 
 <p>
-Our brother wanted to join our group from NV (we're in TX), and we sought to
-solve all of the long-distance role playing hurdles.  <a
-href="voice.html">Voice</a>, text, die rolling, and the battle map.
-There are tools available for many of these problems.
-<p>
-For map sharing, we started with Klooge Werks.  A very fine piece of code
-that is reasonably priced.  However our GM's "I'll describe, you draw"
-style was not very well supported by KW's drawing tools nor is it scalable
-(the GM is the only one that can draw/move things).  What we really
-wanted was something much simpler which actually just made small
-improvements over the
-battlemap, minis, and wet-erase markers.  KW does a whole lot more than
-what we were looking for. 
+One member of our group is in NV (we're in TX), and we sought to solve all of
+the long-distance role playing hurdles.  <a href="voice.html">Voice</a>, text,
+die rolling, and the battle map.  There are tools available for many of these
+problems.  
+
+<p> For map sharing, we started with Klooge Werks.  A very fine piece of code
+that is reasonably priced.  However our GM's "I'll describe, you draw" style
+was not very well supported by KW's drawing tools nor is it scalable (the GM is
+the only one that can draw/move things).  What we really wanted was something
+much simpler which actually just made small improvements over the battlemap,
+minis, and wet-erase markers.  KW does a whole lot more than what we were
+looking for. 
 
 <h2>Features</h2>
 <p>
