put the current release on the doc so that it will stand out when the documentation lags the release

--- a/web/src/maptooldoc.html
+++ b/web/src/maptooldoc.html
@@ -2,7 +2,7 @@
 <!--#include virtual="header.html" -->
 
 <font size="+3" weight=bold >
-MapTool Documentation
+MapTool Documentation <font size="-2"><i>(v1.0M2)</i></font>
 </font>
 
 <h2>Anatomy</h2>
