--- a/web/src/maptool.html
+++ b/web/src/maptool.html
@@ -34,9 +34,14 @@ looking for.
     <li>Java 1.5 (WebStart supported)
 </ul>
 
-<h2><a href="maptooldoc.html">Documentation</a></h2>
+<h2>Documentation</h2>
+<ul>
+    <li><a href="maptool-doc.html">Basic Documentation</a>
+    <li><a href="maptool-screenshots.html">Screen Shots</a>
+    <li><a href="maptool-tutorial.html">Tutorial</a>
+</ul> 
 
-<h2>Version</h2>
+<h2>Current Release</h2>
 
 <p>
 <code>maptool</code> is currently released as 1.0M4.  Roadmaps and release notes are in the <a href="http://sourceforge.net/forum/?group_id=132209">Forums</a>.
@@ -44,18 +49,31 @@ looking for.
 <h2>Changes</h2>
 
 <p>
-Please see the <a href="maptool/ChangeLog">Change Log</a> for a list of
+Please see the <a href="maptool/Release/ChangeLog">Change Log</a> for a list of
 recent changes.</p>
 
 <h2>Download</h2>
 
-<ul>
-<li><a href="maptool/jws.php">
-Java Web Start </a><br>
-<li><a href="maptool/maptool-1.0M4.zip">
-ZIP archive (executable jar included) </a><br>
-<li><a href="http://cvs.sourceforge.net/viewcvs.py/rptools/maptool/">
-Source Code via CVS </a><br>
-</ul>
+<table border=0 width="100%">
+  <tr>
+    <th align=left>General Release&nbsp;&nbsp;</th>
+    <td> <a href="maptool/Release/webstart/jws.php">Web Start</a> </td>
+    <td> <a href="maptool/Release/maptool-1.0M4.zip">ZIP archive</a> </td>
+  </tr>
+  <tr>
+    <th align=left>Beta/Testing</th>
+    <td> <a href="maptool/Beta/webstart/jws.php">Web Start</a> </td>
+    <td> <a href="maptool/Beta/maptool-1.0M4.zip">ZIP archive</a> </td>
+  </tr>
+  <tr>
+    <th align=left>Alpha (not for general use)&nbsp;&nbsp;</th>
+    <td> <a href="maptool/Alpha/webstart/jws.php">Web Start</a> </td>
+    <td> <a href="maptool/Alpha/maptool-1.0M4.zip">ZIP archive</a> </td>
+  </tr>
+  <tr>
+    <th align=left  colspan=3><a href="http://cvs.sourceforge.net/viewcvs.py/rptools/maptool/">
+Source Code via CVS </a></th>
+  </tr>
+</table>
 
 <!--#include virtual="footer.html" -->
