Added Release for quicklaunch

--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -1,6 +1,6 @@
             <h4 style="leftbar-topicheading">Quick Launch</h4>
                 <ul><li><a href="dicetool/jws.php"><code>dicetool</code></a>
-                    <li><a href="maptool/jws.php"><code>maptool</code></a>
+                    <li><a href="maptool/Release/webstart/jws.php"><code>maptool</code></a>
                     <li><a href="tokentool/jws.php"><code>tokentool</code></a>
                 </ul>
             <h4 style="leftbar-topicheading">Tools</h4>
