--- a/web/src/maptool.html
+++ b/web/src/maptool.html
@@ -57,8 +57,11 @@ recent changes.</p>
 <table border=0 width="100%">
   <tr>
     <th align=left>General Release&nbsp;&nbsp;</th>
+    <td colspan=2>Not Available</td>
+<!--
     <td> <a href="maptool/Release/webstart/jws.php">Web Start</a> </td>
     <td> <a href="maptool/Release/maptool-1.0M4.zip">ZIP archive</a> </td>
+-->
   </tr>
   <tr>
     <th align=left>Beta/Testing</th>
@@ -68,7 +71,7 @@ recent changes.</p>
   <tr>
     <th align=left>Alpha (not for general use)&nbsp;&nbsp;</th>
     <td> <a href="maptool/Alpha/webstart/jws.php">Web Start</a> </td>
-    <td> <a href="maptool/Alpha/maptool-1.0M4.zip">ZIP archive</a> </td>
+    <td> <a href="maptool/Alpha/maptool-1.0M5.zip">ZIP archive</a> </td>
   </tr>
   <tr>
     <th align=left  colspan=3><a href="http://cvs.sourceforge.net/viewcvs.py/rptools/maptool/">
