fixed all three tools to launch binaries from $tool/dist.
Moved documentation around (removed/added is really just mving)

Will probably have to fix the Beta tagging of dicetool jws

--- a/web/src/leftbar.html
+++ b/web/src/leftbar.html
@@ -1,7 +1,7 @@
             <h4 style="leftbar-topicheading">Quick Launch</h4>
-                <ul><li><a href="dicetool/jws.php"><code>dicetool</code></a>
-                    <li><a href="maptool/Release/webstart/jws.php"><code>maptool</code></a>
-                    <li><a href="tokentool/jws.php"><code>tokentool</code></a>
+                <ul><li><a href="dicetool/Beta/webstart/jws.php"><code>dicetool</code></a>
+                    <li><a href="maptool/Beta/webstart/jws.php"><code>maptool</code></a>
+                    <li><a href="tokentool/Beta/webstart/jws.php"><code>tokentool</code></a>
                 </ul>
             <h4 style="leftbar-topicheading">Tools</h4>
                 <ul><li><a href="dicetool.html"><code>dicetool</code></a>
