--- a/web/src/maptool.html
+++ b/web/src/maptool.html
@@ -38,13 +38,15 @@ looking for.
 <ul>
     <li><a href="maptool-doc.html">Basic Documentation</a>
     <li><a href="maptool-screenshots.html">Screen Shots</a>
+<!--
     <li><a href="maptool-tutorial.html">Tutorial</a>
+-->
 </ul> 
 
 <h2>Current Release</h2>
 
 <p>
-<code>maptool</code> is currently released as 1.0M4.  Roadmaps and release notes are in the <a href="http://sourceforge.net/forum/?group_id=132209">Forums</a>.
+<code>maptool</code> is currently available as Beta release 1.0M4.  Roadmaps and release notes are in the <a href="http://sourceforge.net/forum/?group_id=132209">Forums</a>.
 
 <h2>Changes</h2>
 
@@ -57,6 +59,7 @@ recent changes.</p>
 <table border=0 width="100%">
   <tr>
     <th align=left>General Release&nbsp;&nbsp;</th>
+    <td>&nbsp;&nbsp;</td>
     <td colspan=2>Not Available</td>
 <!--
     <td> <a href="maptool/Release/webstart/jws.php">Web Start</a> </td>
@@ -65,11 +68,13 @@ recent changes.</p>
   </tr>
   <tr>
     <th align=left>Beta/Testing</th>
+    <td>&nbsp;&nbsp;</td>
     <td> <a href="maptool/Beta/webstart/jws.php">Web Start</a> </td>
     <td> <a href="maptool/Beta/maptool-1.0M4.zip">ZIP archive</a> </td>
   </tr>
   <tr>
-    <th align=left>Alpha (not for general use)&nbsp;&nbsp;</th>
+    <th align=left>Alpha</th>
+    <td>&nbsp;&nbsp;</td>
     <td> <a href="maptool/Alpha/webstart/jws.php">Web Start</a> </td>
     <td> <a href="maptool/Alpha/maptool-1.0M5.zip">ZIP archive</a> </td>
   </tr>
