--- a/web/src/tokentool-doc.html
+++ b/web/src/tokentool-doc.html
@@ -2,7 +2,7 @@
 <!--#include virtual="header.html" -->
 
 <font size="+3" weight=bold >
-TokenTool Documentation
+TokenTool Documentation <font size="-2"><i>(v1.0M1)</i></font>
 </font>
 
 <h2>Drop</h2>
