--- a/web/src/tokentool.html
+++ b/web/src/tokentool.html
@@ -21,12 +21,16 @@ easy.
     <li>Java 1.5 (WebStart supported)
 </ul>
 
-<h2><a href="tokentooldoc.html">Documentation</a></h2>
+<h2>Documentation</h2>
+
+<ul>
+  <li><a href="tokentool-doc.html">Online Documentation</a>
+</ul>
 
 <h2>Version</h2>
 
 <p>
-<code>tokentool</code> is currently released as 1.0M2.  Roadmaps and release notes are in the <a href="http://sourceforge.net/forum/?group_id=132209">Forums</a>.
+<code>tokentool</code> is currently available as Beta release 1.0M2.  Roadmaps and release notes are in the <a href="http://sourceforge.net/forum/?group_id=132209">Forums</a>.
 
 <h2>Changes</h2>
 
@@ -36,13 +40,32 @@ recent changes.</p>
 
 <h2>Download</h2>
 
-<ul>
-<li><a href="tokentool/jws.php">
-Java Web Start </a><br>
-<li><a href="tokentool/tokentool-1.0M2.zip">
-ZIP archive (executable jar included) </a><br>
-<li><a href="http://cvs.sourceforge.net/viewcvs.py/rptools/tokentool/">
-Source Code via CVS </a><br>
-</ul>
+<table border=0 width="100%">
+  <tr>
+    <th align=left>General Release&nbsp;&nbsp;</th>
+    <td>&nbsp;&nbsp;</td>
+    <td colspan=2 align=center><b><i>Not Available</i></b></td>
+<!--
+    <td> <a href="tokentool/Release/webstart/jws.php">Web Start</a> </td>
+    <td> <a href="tokentool/Release/tokentool-1.0M2.zip">ZIP archive</a> </td>
+-->
+  </tr>
+  <tr>
+    <th align=left>Beta/Testing</th>
+    <td>&nbsp;&nbsp;</td>
+    <td> <a href="tokentool/Beta/webstart/jws.php">Web Start</a> </td>
+    <td> <a href="tokentool/Beta/tokentool-1.0M2.zip">ZIP archive</a> </td>
+  </tr>
+  <tr>
+    <th align=left>Alpha</th>
+    <td>&nbsp;&nbsp;</td>
+    <td> <a href="tokentool/Alpha/webstart/jws.php">Web Start</a> </td>
+    <td> <a href="tokentool/Alpha/tokentool-1.0M2.zip">ZIP archive</a> </td>
+  </tr>
+  <tr>
+    <th align=left  colspan=3><a href="http://cvs.sourceforge.net/viewcvs.py/rptools/tokentool/">
+Source Code via CVS </a></th>
+  </tr>
+</table>
 
 <!--#include virtual="footer.html" -->
