fixed font treatment

--- a/web/src/maptool.html
+++ b/web/src/maptool.html
@@ -60,7 +60,7 @@ recent changes.</p>
   <tr>
     <th align=left>General Release&nbsp;&nbsp;</th>
     <td>&nbsp;&nbsp;</td>
-    <td colspan=2>Not Available</td>
+    <td colspan=2 align=center><b><i>Not Available</b></i></td>
 <!--
     <td> <a href="maptool/Release/webstart/jws.php">Web Start</a> </td>
     <td> <a href="maptool/Release/maptool-1.0M4.zip">ZIP archive</a> </td>
